// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserService should create a user 1`] = `
{
  "bio": "bio",
  "id": "1",
  "name": "John Doe",
  "profileImg": null,
  "username": "johndoe",
}
`;

exports[`UserService should get a user 1`] = `
{
  "user": {
    "bio": "bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "isActive": true,
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;

exports[`UserService should get liked posts by a user 1`] = `
{
  "count": 1,
  "items": [
    {
      "author": {
        "name": "John Doe",
        "profileImg": null,
        "username": "johndoe",
      },
      "createdAt": 2000-01-01T00:00:00.000Z,
      "id": "id-1",
      "images": [
        {
          "id": "id-1",
          "url": "https://example.com/image1.jpg",
        },
      ],
      "isLiked": false,
      "likes": 0,
      "parent": {
        "author": {
          "username": "johndoe",
        },
      },
      "parentId": "id-2",
      "replies": 0,
      "text": "This is a post",
    },
  ],
}
`;

exports[`UserService should get user posts 1`] = `
{
  "count": 1,
  "items": [
    {
      "author": {
        "name": "John Doe",
        "profileImg": null,
        "username": "johndoe",
      },
      "createdAt": 2000-01-01T00:00:00.000Z,
      "id": "id-1",
      "images": [
        {
          "id": "id-1",
          "url": "https://example.com/image1.jpg",
        },
      ],
      "isLiked": false,
      "likes": 0,
      "parent": {
        "author": {
          "username": "johndoe",
        },
      },
      "parentId": null,
      "replies": 0,
      "text": "This is a post",
    },
  ],
}
`;

exports[`UserService should get users that a user is following 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserService should get users that follow a user 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserService should search users 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;
